lanecwe-Prod/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SFDC_Object__c</fullName>
        <label>SFDC Object</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClientUsageInfos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chats/Mails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Ops Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who in Sales Ops can we go to for business questions that may come up for this enhancement?</inlineHelpText>
        <label>Sales Ops Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesSalesOpsSponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <description>might convert this to lookup field depending on what we do with it</description>
        <label>Secondary Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Andrew Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brandon Winn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carmen Le Grange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Morgan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service/Support Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Set via WF Rule to show the first 150 characters of the Description</description>
        <inlineHelpText>the first 150 characters of the Description</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social_Media_Handle__c</fullName>
        <label>x-Social Media Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Notes__c</fullName>
        <inlineHelpText>Change to deployment dates and rational for the change</inlineHelpText>
        <label>Status Change Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <inlineHelpText>why requests were rejected or any additional status comments</inlineHelpText>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_By_Contact_Email__c</fullName>
        <description>Likely used to do DT&apos;s update on matching email address to PGi Account object related contacts</description>
        <label>Submitted By Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitted_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_by_Channel__c</fullName>
        <label>Submitted by Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters CEUR/NEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters WEUR/SEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_Priority_Level_Number__c</fullName>
        <description>CASE(
            ISPICKVAL(Priority, &quot;Medium&quot;)</description>
        <formula>ROUND(

(CASE(Priority, 
&quot;Low&quot;, 1,
&quot;Medium&quot;, 2,
&quot;High&quot;, 3,
&quot;Critical&quot;, 4, 0
)

+

CASE(Users_Impacted__c, 
&quot;End User (1-2)&quot;, 1,
&quot;Team (3-10)&quot;, 2,
&quot;Channel (11-50)&quot;, 3,
&quot;Region (150+)&quot;, 4,
&quot;Global (ALL)&quot;, 5, 0
)

+

CASE(Region__c, 
&quot;ALL&quot;, 4,
&quot;None&quot;,0, 1
)

+

CASE( Type , 
&quot;Login or Permissions&quot;, 10,
&quot;Marketing/Campaign Issue&quot;, 3,
&quot;Data Request&quot;, 2,
&quot;General Question/Issue&quot;, 2, 1
))

/4

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Priority Level Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Priority_Level__c</fullName>
        <formula>CASE( Suggested_Priority_Level_Number__c,
0,&quot;Low&quot;,
1, &quot;Low&quot;,
2, &quot;Medium&quot;,
3, &quot;High&quot;,
4, &quot;Critical&quot;, 
5, &quot;Critical&quot;,
6, &quot;Critical&quot;, &quot;Error in Calculation&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as a guide.  Based on how the Affected Region, Users Impacted, Priority, and Issue Type are selected.  *Note, if you change the priority based on this value, it could change the suggested priority level as well.</inlineHelpText>
        <label>Suggested Priority Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Comments__c</fullName>
        <description>Will be required when changing status to anything other than New</description>
        <label>Summary Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_SFDC_Changes__c</fullName>
        <label>x-Summary of SFDC Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;),Case_Owner_Copy__r.Manager.FirstName +&quot; &quot;+ Case_Owner_Copy__r.Manager.LastName ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>This defaults from Owners Mangers name and will be read only.</description>
        <label>Supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>Used to track what level of support a ticket is at or was closed at.  WF Rule to move it up anytime the case is escalated.</description>
        <label>Support Level</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Tier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TEMP_Off_Shore_Hours__c</fullName>
        <label>TEMP-Off Shore Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMP_On_Shore_Hours__c</fullName>
        <label>TEMP-On Shore Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Details_Dependencies__c</fullName>
        <inlineHelpText>Input should be technical details and/or dependencies to this case.</inlineHelpText>
        <label>Tech Details/Dependencies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <formula>CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Stage__c</fullName>
        <label>x-Ticket Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>x-Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>Informational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Impacting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Impacting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_1_Owner__c</fullName>
        <label>Tier 1 Owner</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_3_Notes__c</fullName>
        <inlineHelpText>Only visible to Sys admin: Required to be filled out to escalate from Tier 2 to Tier 3</inlineHelpText>
        <label>Tier 2/3 Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mainly for report filtering purposes for Feature Requests used by GCS SE</description>
        <inlineHelpText>Set this to True when this is a top request that you want to report off of.</inlineHelpText>
        <label>Top Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Impact__c</fullName>
        <inlineHelpText>what is the impact to training preparation?</inlineHelpText>
        <label>Training Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Notes__c</fullName>
        <label>Training Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_Details__c</fullName>
        <label>Issues Category Type Details</label>
        <picklist>
            <controllingField>Issues_Category_Type__c</controllingField>
            <picklistValues>
                <fullName>x-Appirio Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Delayed to Post GO LIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug-Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug-Research Further</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Channel Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Field Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-SFDC Team Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard/Report Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Marketing Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Data Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Status Change/Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hire Request(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Reassignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Data Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Placeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Suggestion/Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-Ownership Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x-General Data Cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Insert/Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Development__c</fullName>
        <inlineHelpText>ST need for Q/C Analysis</inlineHelpText>
        <label>Type of Development</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Catalog</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Error__c</fullName>
        <label>User Error</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users_Impacted__c</fullName>
        <description>Used to help determine priority of a case.</description>
        <label>Users Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>End User (1-2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team (3-10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel (11-50)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region (150+)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global (ALL)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_What_group_ticket_is_assigned_to__c</fullName>
        <label>x-Who/What group ticket is assigned to</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_external_id__c</fullName>
        <externalId>true</externalId>
        <label>x-case_external_id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>iMeet_Client_ID__c</fullName>
        <label>x-iMeet Client ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iMeet_User_ID__c</fullName>
        <label>x-iMeet User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is1__Chat_ID__c</fullName>
        <externalId>true</externalId>
        <label>Chat ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is1__IS_Account_ID__c</fullName>
        <label>IS Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is1__Mail_ID__c</fullName>
        <externalId>true</externalId>
        <label>Mail ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isCurrent_Release_Phase__c</fullName>
        <formula>$Setup.Current_Release__c.Current_Release_Phase__c =  Release_Phase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCurrent Release Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNext_Release_Phase__c</fullName>
        <description>Shows if this record is in the next release phase or not, for reporting list view purposes ONLY</description>
        <formula>$Setup.Current_Release__c.Next_Release_Phase__c = Release_Phase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isNext Release Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Completed_Developments__c</fullName>
        <label># of Completed Developments</label>
        <summaryFilterItems>
            <field>Development__c.Passed_QC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Development__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Developments__c</fullName>
        <label># of Developments</label>
        <summaryForeignKey>Development__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>z_Assigned_to_Tier_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created 7/19/12</description>
        <label>z-Assigned to Tier 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>z_In_This_Month_s_Release__c</fullName>
        <description>Used to display items scheduled to begin work THIS WEEK without having to constantly change the value.  

Week of the year is the IF( with CEILING....this needs to be updated each year unless Jan. 1 is a Sunday.  If its a Sunday it should be +1 instead of -3.  For 2014 Jan. 1 is wednesday so it needs to be 4 less so +1 - 4 = -3 is where that comes from.  I also removed the first section as unlikely to hit a week of 53 the way i am using this.  

IF( 
  CEILING( ( Estimated_Start_Date__c- DATE( YEAR( Estimated_Start_Date__c), 1, 1) - 3) / 7) &gt; 52,
  &quot;52&quot;,
  TEXT(CEILING( ( Estimated_Start_Date__c- DATE( YEAR( Estimated_Start_Date__c ), 1, 1) - 3) / 7))
)</description>
        <formula>IF( 
CEILING( ( Estimated_Start_Date__c- DATE( YEAR( Estimated_Start_Date__c ), 1, 1) - 3) / 7) = CEILING( ( TODAY() - DATE( YEAR( TODAY()), 1, 1) - 3) / 7), &quot;TRUE&quot;, &quot;FALSE&quot;
) 


/*changed 8/8/2014 as moving to 2 week sprints_Andy*/
/*IF( 
ClosedDate &lt; (NOW() - 60), &quot;Prior Month/Year Release&quot;, 
IF( 
CASE(MONTH(TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, &quot;Error in formula&quot; 
) = TEXT(Estimated_Release_Month__c) , &quot;True&quot;, 
IF( 
CASE(MONTH(TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, &quot;Error in formula&quot; 
) = &quot;Error in formula&quot;, &quot;Error in formula&quot;, 
&quot;False&quot; 
)))
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-isThis Week Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_Status_Summary__c</fullName>
        <description>USED FOR REPORTING PURPOSES TO CONSOLIDATE STATUS VALUES</description>
        <formula>CASE(TEXT(Status),
&quot;New&quot;, &quot;Not Started&quot;,
&quot;Accepted&quot;, &quot;Not Started&quot;,
&quot;In Progress&quot;, &quot;Working&quot;,
&quot;IT Re-work Needed&quot;, &quot;Working&quot;,
&quot;Awaiting Response&quot;, &quot;Work Stopped&quot;,
&quot;On Hold&quot;, &quot;Work Stopped&quot;,
&quot;Ready for Demo&quot;, &quot;Ready for Demo/QC&quot;,
&quot;Ready for IT QC&quot;, &quot;Ready for Demo/QC&quot;,
&quot;Ready for Sales Ops QC&quot;, &quot;Ready for Demo/QC&quot;,
&quot;Ready for Contract Team QC&quot;, &quot;Ready for Demo/QC&quot;,
&quot;Manual Release - Prod&quot;, &quot;Ready for Release&quot;,
&quot;Ready for Release&quot;, &quot;Ready for Release&quot;,
&quot;Closed&quot;, &quot;Closed&quot;,
&quot;Closed - Deployed&quot;, &quot;Closed&quot;, TEXT(Status)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-Status Summary</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ALL_closed_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Release_Phase__c</columns>
        <columns>Impacted_Group__c</columns>
        <columns>Tier_2_3_Notes__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>01230000001ElQb,01230000001EuYu,Case.Feature_Requests</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed,Closed - Deployed</value>
        </filters>
        <label>ALL closed cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>CRM_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_open_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>Release_Phase__c</columns>
        <columns>Impacted_Group__c</columns>
        <columns>Tier_2_3_Notes__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>01230000001ElQb,01230000001EuYu,Case.Feature_Requests</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - Deployed</value>
        </filters>
        <label>ALL open cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>CRM_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Carmen_Wong</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Committed_Deploy_Date__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Priority_Order__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>Submitted_By_User__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cwong</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Closed - Deployed,Closed - Not Needed,Ready for Release</value>
        </filters>
        <filters>
            <field>Estimated_Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned to Carmen Wong</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_Lite_APAC</group>
            <group>Admin_Lite_EMEA</group>
            <group>Admin_Lite_NA</group>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carmens_Closed_Cases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Estimated_Resolution_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Submitted_By_User__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Projects,Case.PGi,Case.Feature_Requests,Case.Enhancement_Request</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>feedback,issues</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>x-Carmen&apos;s Closed Cases This Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Reporting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carmens_Closed_Cases_ALL</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Estimated_Resolution_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Submitted_By_User__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Projects,Case.PGi,Case.Feature_Requests,Case.Enhancement_Request</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>feedback,issues</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>x-Carmen&apos;s Closed Cases ALL</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Reporting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_On_Hold</fullName>
        <columns>OWNER_NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Submitted_By_User__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>On_Hold_Person__c</columns>
        <columns>Case_Support_Type__c</columns>
        <columns>Estimated_Release_Month__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>On_Hold_Person__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>**Cases On Hold</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_Lite_APAC</group>
            <group>Admin_Lite_EMEA</group>
            <group>Admin_Lite_NA</group>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
</CustomObject>